[package]
name = "aya_base"
description = "Playing card library for efficient hand lookup"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
colored-4color = []
std = ["fastrand/std"]

[dependencies]
colored = { version = "2.0.4", optional = true }
fastrand = { version = "2.0.1", default-features = false }

[dev-dependencies]
rstest = "0.18.2"
