[package]
name = "aya_codegen"
description = "Poker hand rank lookup table generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cards", "poker", "codegen"]
categories = ["games"]

[dependencies]
aya_base = { version = "0.1.0", path = "../aya_base" }
miniphf = { version = "0.1.0", path = "../miniphf" }

[dev-dependencies]
fastrand = "2.0.1"
