[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
aya_codegen = { path = "../aya_codegen" }
aya_poker = { path = "../aya_poker" }
ckc-rs = "0.1.14"
poker = "0.5"
rust_poker = { git = "https://github.com/dtrifuno/rust_poker" }
rs_poker = "2.0.0"

[dev-dependencies]
divan = "0.1.2"
fastrand = "2.0.1"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "create_tables"
harness = false

[[bench]]
name = "evaluate"
harness = false

[profile.bench]
lto = "thin"
opt-level = 3
