[package]
name = "miniphf"
description = "Fast and simple builder for PTHash PHF hash maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["mphf", "hashing", "hashmap"]
categories = ["algorithms", "data-structures"]

[dependencies]
quickdiv = "0.1.1"
